--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-pyrogram
-tgcrypto
-configparser
-pyautogui
+pyrogram==2.0.1
+tgcrypto==1.2.5
+configparser==6.0.0
+pyautogui==0.9.54
 pillow==9.5.0
-requests
-beautifulsoup4
-stegano
-cryptography
-pillow
+requests==2.31.0
+beautifulsoup4==4.12.2
+stegano==0.11.3
+cryptography==41.0.5
